--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -2,26 +2,112 @@
 
 /*começo de formatação responsivo utlizando Media Query.*/
 
-@media (min-width: 1900px) and (max-width: 2500px) {
+@media (min-width: 1901px) and (max-width: 2500px) {
     body {
         background-size: 870px;
     }
 }
 
-@media (min-width: 1700px) and (max-width: 1900px) {
+@media (min-width: 1701px) and (max-width: 1900px) {
     body {
         background-size: 800px;
     }
 }
 
-@media (min-width: 1440px) and (max-width: 1700px) {
+@media (min-width: 1441px) and (max-width: 1700px) {
     body {
         background-size: 750px;
     }
+
 }
 
 @media (min-width: 1330px) and (max-width: 1440px) {
     body {
         background-size: 700px;
+    }
+}
+
+@media (min-width: 1150px) and (max-width: 1439px) {
+    .conteiner {
+        width: 950px;
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1149px) {
+    body {
+        background-position: left -200px;
+    }
+
+    .conteiner {
+        width: 850px;
+    }
+
+    .sobre-webdesigner article img {
+        width: 450px;   /*largura da imagem.*/
+    }
+
+}
+
+@media (min-width: 915px) and (max-width: 1023px) {
+    .conteiner {
+        width: 600px;
+    }
+
+    .row {
+        flex-direction: column; /*Deixa os itens da class ROW em colunas.*/
+    }
+
+    .sobre-webdesigner article img {
+        width: 450px;   /*largura da imagem.*/
+        margin: 35px 0 0 0;
+    }
+
+    header nav {
+        margin: 25px 0px; /*Espaçamento dos itens, para que os mesmos não fiquem muito juntos.*/
+    }
+
+    .sobre-webdesigner article {
+        width: 100%; /*largura de tudo que está detro do article.*/
+    }
+
+    footer {
+        align-items: center;
+    }
+}
+
+@media (min-width: 665px) and (max-width: 914px) {
+    .conteiner {
+        width: 400px;
+    }
+
+    .sobre-webdesigner article img {
+        width: 150px;   /*largura da imagem.*/
+        margin: 35px 0 0 0;
+    }
+
+    .row {
+        flex-direction: column; /*Deixa os itens da class ROW em colunas.*/
+    }
+
+    footer {
+        align-items: center;
+    }
+}
+
+@media (min-width: 400px) and (max-width: 913px) {
+    .conteiner {
+        width: 300px;
+    }
+
+    .row {
+        flex-direction: column;
+    }
+
+    .sobre-webdesigner article img {
+        width: 200px;
+    }
+
+    footer {
+        align-items: center;
     }
 }
